--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,12 @@ body {
   flex-grow: 1;
   padding: 1.5rem 1.7rem;
 }
+.ql-size-small {
+  font-size: 0.75em;
+}
+.ql-size-large {
+  font-size: 1.5em;
+}
+.ql-size-huge {
+  font-size: 2.5em;
+}
